<resources>
    <string name="app_name">记账本</string>

    <string name="guide_detail">明细</string>
    <string name="guide_statement">报表</string>
    <string name="guide_add_record">记一笔</string>
    <string name="guide_find">发现</string>
    <string name="guide_mine">我的</string>

    <string name="income">收入</string>
    <string name="expend">支出</string>

    <string name="add_record">记一笔</string>

    <string name="birth">生日</string>
    <string name="private_note">私人账本</string>
    <string name="rank_expend">支出榜单</string>
    <string name="rank_income">收入榜单</string>
    <string name="voice_tips">提示铃声</string>
    <string name="update_info">修改信息</string>
    <string name="upload_data">上传账本数据</string>
    <string name="download_data">更新账本数据</string>
    <string name="exchange_count">切换账号</string>
    <string name="memorandum">备忘笔记</string>

    <string name="type">类型</string>
    <string name="money">金额</string>
    <string name="payee">收款方</string>
    <string name="payer">付款方</string>
    <string name="pay_method">支付方式</string>
    <string name="date">时间</string>
    <string name="mark">备注</string>

    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="delete">清除</string>
    <string name="finish">完成</string>

    <string name="income_yuan">收入(元)</string>
    <string name="expend_yuan">支出(元)</string>
    <string name="remainder_yuan">结余(元)</string>

    <string-array name="pay_methods">
        <item>现金</item>
        <item>支付宝</item>
        <item>微信</item>
        <item>银行卡</item>
        <item>信用卡</item>
    </string-array>

</resources>
