<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.test.hudezhi.myapplication.ui.fragment.MineFragment">

    <LinearLayout
        style="@style/TitleBarTheme"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_mine"
            android:textColor="@color/black_text"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/icon_home_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:background="@color/gray_line_light" />

    <RelativeLayout style="@style/LinearPressTheme">

        <ImageView
            android:id="@+id/img_lock"
            style="@style/LinearImageTheme"
            android:src="@mipmap/icon_lock" />

        <TextView
            style="@style/LinearTextViewTheme"
            android:layout_toRightOf="@+id/img_lock"
            android:gravity="center"
            android:text="@string/private_note" />

        <ImageView
            style="@style/LinearArrowTheme"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line" />

    <RelativeLayout style="@style/LinearPressTheme">

        <ImageView
            android:id="@+id/img_total_expend"
            style="@style/LinearImageTheme"
            android:src="@mipmap/icon_expend_tag" />

        <TextView
            style="@style/LinearTextViewTheme"
            android:layout_toRightOf="@+id/img_total_expend"
            android:gravity="center"
            android:text="@string/rank_expend" />

        <ImageView
            style="@style/LinearArrowTheme"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line" />

    <RelativeLayout style="@style/LinearPressTheme">

        <ImageView
            android:id="@+id/img_rank_income"
            style="@style/LinearImageTheme"
            android:src="@mipmap/icon_income_tag" />

        <TextView
            style="@style/LinearTextViewTheme"
            android:layout_toRightOf="@+id/img_rank_income"
            android:gravity="center"
            android:text="@string/rank_income" />

        <ImageView
            style="@style/LinearArrowTheme"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:background="@color/gray_line_light" />

    <RelativeLayout style="@style/LinearPressTheme">

        <ImageView
            android:id="@+id/img_memorandum"
            style="@style/LinearImageTheme"
            android:src="@mipmap/icon_memorandum" />

        <TextView
            style="@style/LinearTextViewTheme"
            android:layout_toRightOf="@+id/img_memorandum"
            android:gravity="center"
            android:text="@string/memorandum" />

        <ImageView
            style="@style/LinearArrowTheme"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:background="@color/gray_line_light" />

    <RelativeLayout style="@style/LinearPressTheme">

        <ImageView
            android:id="@+id/img_ring"
            style="@style/LinearImageTheme"
            android:src="@mipmap/icon_ring" />

        <TextView
            style="@style/LinearTextViewTheme"
            android:layout_toRightOf="@+id/img_ring"
            android:gravity="center"
            android:text="@string/voice_tips" />

        <ImageView
            style="@style/LinearArrowTheme"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:background="@color/gray_line_light" />


    <RelativeLayout style="@style/LinearPressTheme">

        <ImageView
            android:id="@+id/img_upload_data"
            style="@style/LinearImageTheme"
            android:src="@mipmap/icon_upload_data" />

        <TextView
            style="@style/LinearTextViewTheme"
            android:layout_toRightOf="@+id/img_upload_data"
            android:gravity="center"
            android:text="@string/upload_data" />

        <ImageView
            style="@style/LinearArrowTheme"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line" />

    <RelativeLayout style="@style/LinearPressTheme">

        <ImageView
            android:id="@+id/img_download_data"
            style="@style/LinearImageTheme"
            android:src="@mipmap/icon_download_data" />

        <TextView
            style="@style/LinearTextViewTheme"
            android:layout_toRightOf="@+id/img_download_data"
            android:gravity="center"
            android:text="@string/download_data" />

        <ImageView
            style="@style/LinearArrowTheme"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:background="@color/gray_line_light" />

    <RelativeLayout style="@style/LinearPressTheme">

        <ImageView
            android:id="@+id/img_update_info"
            style="@style/LinearImageTheme"
            android:src="@mipmap/revise" />

        <TextView
            style="@style/LinearTextViewTheme"
            android:layout_toRightOf="@+id/img_update_info"
            android:gravity="center"
            android:text="@string/update_info" />

        <ImageView
            style="@style/LinearArrowTheme"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:background="@drawable/button_bg_press_selector"
            android:text="@string/exchange_count"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
