<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@color/gray_line" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_textview" />

    <RadioGroup
        android:id="@+id/group_guide_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="6dp">

        <RadioButton
            android:id="@+id/rb_detail_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/guide_detail_selector"
            android:gravity="center"
            android:text="@string/guide_detail" />

        <RadioButton
            android:id="@+id/rb_report_charm_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/guide_statement_selector"
            android:gravity="center"
            android:text="@string/guide_statement" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/rb_find_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/guide_find_selector"
            android:gravity="center"
            android:text="@string/guide_find" />

        <RadioButton
            android:id="@+id/rb_mine_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/guide_mine_selector"
            android:gravity="center"
            android:text="@string/guide_mine" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_add_record"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/icon_add_record" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="6dp"
            android:text="@string/guide_add_record" />

    </LinearLayout>

</RelativeLayout>