<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RecordInfoActivity">

    <RelativeLayout
        style="@style/TitleBarTheme"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:src="@mipmap/icon_left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="娱乐"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/icon_edit" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TagTextViewTheme"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="支出" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TagTextViewTheme"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/money" />

        <EditText
            style="@style/edittext_theme"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TagTextViewTheme"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/payer" />

        <EditText
            style="@style/edittext_theme"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TagTextViewTheme"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/payee" />

        <EditText
            style="@style/edittext_theme"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TagTextViewTheme"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/pay_method" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TagTextViewTheme"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/date" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edittext_bg"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="2018-09-09"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/icon_down_arrow" />

            <View
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:background="@color/black_line" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="18:09"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="4dp"
                android:src="@mipmap/icon_down_arrow" />


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TagTextViewTheme"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/mark" />

        <EditText
            style="@style/edittext_theme"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:maxLines="3"
            android:singleLine="false" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/black_text" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/gray_line" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/black_text" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>